renamed blog to notebook; fixed spacing on post body

--- a/apps/publish/src/css/custom.css
+++ b/apps/publish/src/css/custom.css
@@ -13,6 +13,16 @@ button {
   padding: 0;
 }
 
+p {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+pre {
+  padding: 8px;
+  background-color: #f9f9f9;
+}
+
 a {
   color: inherit;
   text-decoration: inherit;
